hledger/test/errors/csvnoinclude.j
#!/usr/bin/env -S hledger check -f 
# Trying to include a CSV file.

include csvnoinclude.csv


